--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -77,6 +77,7 @@ body {
                     > li {
 
                         > a {
+                            display: flex;
                             padding: 0.4em 0.5em;
                             border-radius: 100em;
                             background-color: $sub-col-color;
